# dupliganger

./: .gitattributes  .gitignore  CHANGES.rst  DESCRIPTION.rst  LICENSE.txt  MANIFEST.in  README.rst  VERSION  _version.py  build.sh  develop.sh  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
dupliganger/: __main__.py  _version.py  annotate_qtrim.py  barcode_split_quality_filter_umi_anno.py  build_read_and_loc_dbs.py  command_line.py  common.py  constants.py  db.py  dedup.py  dupliganger.py  exceptions.py  qtrim.py  remove_adapter.py  remove_umi.py  sam.py
dupliganger/test/: common.py  test_annotate_qtrim.py  test_barcode_split_quality_filter_umi_anno.py  test_build_read_and_loc_dbs.py  test_dedup.py  test_parse_cigar.py  test_qtrim.py  test_remove_adapter.py  test_remove_umi.py
dupliganger/test/files/annotate_qtrim/eout/: 03_low_qual_3prime.rmumi.rmadapt.qtrim.anno.fq  03_low_qual_5prime_R1.rmumi.rmadapt.qtrim.anno.fq  07_several_low_qual_R1.rmumi.rmadapt.qtrim.anno.fq
dupliganger/test/files/dedup/in/: 11_first_test.pe.bioo.sam  (+1 more)
superdeduper/: _version.py  annotate_qtrim.py  barcode_split_quality_filter_umi_anno.py  build_read_and_loc_dbs.py  cmd1.py  cmd2.py  command_line.py  common.py  constants.py  db.py  dedup.py  qtrim.py  remove_adapter.py  remove_umi.py  sam.py  superdeduper.py
superdeduper/test/: common.py  test_annotate_qtrim.py  test_barcode_split_quality_filter_umi_anno.py  test_build_read_and_loc_dbs.py  test_dedup.py  test_parse_cigar.py  test_qtrim.py  test_remove_adapter.py  test_remove_umi.py  test_something.py
(+100 files in other folders)
