[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[bdist_wheel]
# Works on Python 2 and 3.
universal = 1

[zest.releaser]
create-wheel = yes
extra-message = [ci skip]
# Instead of 1.3.0, zest suggests 1.3. Instead of 2.0.0, zest suggests 2.0.
less-zeroes = yes
push-changes = yes

[check-manifest]
ignore =
    *cfg
    .*yml
    .coveragerc
    bootstrap.py
    doc/build
    doc/build/*
    tox.ini
