[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

[bdist_wheel]
# Works on Python 2 and 3.
universal = 1

[versioneer]
VCS = git
style = pep440
versionfile_source = dupliganger/_version.py
versionfile_build = dupliganger/_version.py
tag_prefix = ''
parentdir_prefix = dupliganger-

[check-manifest]
ignore =
    *cfg
    .*yml
    .coveragerc
    bootstrap.py
    doc/build
    doc/build/*
    tox.ini
